# RentCodeDjangoAPI

./: db.sqlite3  manage.py  pyproject.toml
rentcode/: admin.py  api.py  apps.py  models.py  schemas.py
rentcode/migrations/: 0001_initial.py  0002_code_price.py
rentcodeapi/: asgi.py  settings.py  urls.py  wsgi.py
sales/: admin.py  api.py  models.py  schemas.py
sales/migrations/: 0001_initial.py  0002_alter_client_codes.py  0003_alter_client_email.py
